# crewAI-examples

./: README.md
hackathon_analyser/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
hackathon_analyser/src/hackathon_analyser/: main.py
hackathon_analyser/src/hackathon_analyser/crews/project_analysis/: crew.py  main.py
hackathon_analyser/src/hackathon_analyser/crews/project_analysis/config/: agents.yaml  tasks.yaml
hackathon_analyser/src/hackathon_analyser/crews/synthesizer/: crew.py
hackathon_analyser/src/hackathon_analyser/crews/synthesizer/config/: agents.yaml  tasks.yaml
reddit/: .env.example  Dockerfile  README.md  pyproject.toml
reddit/src/reddit_content_creator/: crew.py  http_main.py  main.py
reddit/src/reddit_content_creator/config/: agents.yaml  tasks.yaml
reddit/src/reddit_content_creator/static/: index.html
reddit/src/reddit_content_creator/tools/: reddit.py
