[project]
name = "reddit_content_creator"
version = "0.1.0"
description = "reddit content creator using crewAI"
authors = [
    { name = "Mikatux" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "waitress",
    "flask",
    "praw",
    "ollama",
    "google.generativeai",
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
reddit_content_creator = "reddit_content_creator.main:run"
run_crew = "reddit_content_creator.main:run"
train = "reddit_content_creator.main:train"
replay = "reddit_content_creator.main:replay"
test = "reddit_content_creator.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
